Fix name alignment for small sizes

--- a/src/components/molecules/host/_host.scss
+++ b/src/components/molecules/host/_host.scss
@@ -12,6 +12,7 @@
     word-break: break-word;
     @include responsive(small) {
       font-size: 12px;
+      width: 60px;
     }
   }
   &__picture {
